--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "f2e250fa",
    "metadata": {},
    "outputs": [],
@@ -21,6 +21,8 @@
     "import warnings\n",
     "import pandas as pd \n",
     "import logging\n",
+    "import mlflow\n",
+    "import mlflow.tensorflow\n",
     "from sklearn.base import BaseEstimator , TransformerMixin "
    ]
   },
@@ -457,6 +459,92 @@
     "    plt.title(f\"Pred: {np.argmax(predictions[i])}\\nTrue: {np.argmax(y_test[i])}\")\n",
     "    plt.axis('off')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9456540c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf0fd621",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable ellipsis object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m mlflow\u001b[38;5;241m.\u001b[39mset_experiment(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEEG_CNN_Experiment\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Load your EEG dataset here\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m X_train, y_train \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\n\u001b[1;32m     13\u001b[0m X_test, y_test \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Parameters to track\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable ellipsis object"
+     ]
+    }
+   ],
+   "source": [
+    "mlflow.set_experiment(\"EEG_CNN_Experiment\")\n",
+    "\n",
+    "# Define input data here\n",
+    "# x_train, y_train = ...\n",
+    "# Ensure data is preprocessed correctly and one-hot encoded\n",
+    "\n",
+    "# Start MLflow run\n",
+    "with mlflow.start_run():\n",
+    "\n",
+    "    # Log parameters\n",
+    "    mlflow.log_param(\"epochs\", 5)\n",
+    "    mlflow.log_param(\"batch_size\", 64)\n",
+    "    mlflow.log_param(\"optimizer\", \"adam\")\n",
+    "    mlflow.log_param(\"loss\", \"categorical_crossentropy\")\n",
+    "\n",
+    "    # Build model\n",
+    "    model = models.Sequential([\n",
+    "        layers.Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)),\n",
+    "        layers.MaxPooling2D((2, 2)),\n",
+    "        layers.Conv2D(62, (3, 3), activation='relu'),\n",
+    "        layers.MaxPooling2D((2, 2)),\n",
+    "        layers.Flatten(),\n",
+    "        layers.Dense(128, activation='relu'),\n",
+    "        layers.Dense(10, activation='softmax')\n",
+    "    ])\n",
+    "\n",
+    "    model.compile(\n",
+    "        optimizer='adam',\n",
+    "        loss='categorical_crossentropy',\n",
+    "        metrics=['accuracy']\n",
+    "    )\n",
+    "\n",
+    "    # Train model\n",
+    "    history = model.fit(\n",
+    "        x_train, y_train,\n",
+    "        epochs=5,\n",
+    "        batch_size=64,\n",
+    "        validation_split=0.2,\n",
+    "        verbose=1\n",
+    "    )\n",
+    "\n",
+    "    # Log final validation metrics\n",
+    "    mlflow.log_metric(\"val_accuracy\", history.history['val_accuracy'][-1])\n",
+    "    mlflow.log_metric(\"val_loss\", history.history['val_loss'][-1])\n",
+    "\n",
+    "    # Log training metrics as a plot\n",
+    "    plt.plot(history.history['accuracy'], label='Train Accuracy')\n",
+    "    plt.plot(history.history['val_accuracy'], label='Val Accuracy')\n",
+    "    plt.title('Model Accuracy')\n",
+    "    plt.xlabel('Epoch')\n",
+    "    plt.ylabel('Accuracy')\n",
+    "    plt.legend()\n",
+    "    plt.savefig(\"accuracy_plot.png\")\n",
+    "    mlflow.log_artifact(\"accuracy_plot.png\")\n",
+    "\n",
+    "    # Save model\n",
+    "    mlflow.tensorflow.log_model(model, artifact_path=\"cnn_model\")\n"
    ]
   },
   {
