--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "f2e250fa",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,9 @@
     "import logging\n",
     "import mlflow\n",
     "import mlflow.tensorflow\n",
+    "import tf2onnx\n",
+    "import onnx\n",
+    "\n",
     "from sklearn.base import BaseEstimator , TransformerMixin "
    ]
   },
@@ -464,87 +467,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9456540c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "bf0fd621",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable ellipsis object",
+     "ename": "AttributeError",
+     "evalue": "module 'tensorflow.python.keras' has no attribute 'applications'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[31], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m mlflow\u001b[38;5;241m.\u001b[39mset_experiment(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEEG_CNN_Experiment\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Load your EEG dataset here\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m X_train, y_train \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\n\u001b[1;32m     13\u001b[0m X_test, y_test \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Parameters to track\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable ellipsis object"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[37], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkeras2onnx\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01monnx\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Export Keras model to ONNX\u001b[39;00m\n",
+      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/backend-_rtLvpYT-py3.10/lib/python3.10/site-packages/keras2onnx/__init__.py:34\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Variable, cvtfunc, set_logger_level\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfuncbook\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m set_converter, set_converters\n\u001b[0;32m---> 34\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmain\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m convert_keras\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmain\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m export_tf_frozen_graph\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmain\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m build_io_names_tf2onnx\n",
+      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/backend-_rtLvpYT-py3.10/lib/python3.10/site-packages/keras2onnx/main.py:13\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mproto\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m onnx\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtopology\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m convert_topology\n\u001b[0;32m---> 13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mke2onnx\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m static_set_ke2onnx_converters\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mparser\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m parse_graph, parse_graph_modeless\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtopology\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Topology\n",
+      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/backend-_rtLvpYT-py3.10/lib/python3.10/site-packages/keras2onnx/ke2onnx/__init__.py:6\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m###############################################################################\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# Copyright (c) Microsoft Corporation. All rights reserved.\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Licensed under the MIT License. See License.txt in the project root for\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# license information.\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m###############################################################################\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmain\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m keras_layer_to_operator\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmain\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m static_set_ke2onnx_converters\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlayer_spec\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m keras_layer_spec\n",
+      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/backend-_rtLvpYT-py3.10/lib/python3.10/site-packages/keras2onnx/ke2onnx/main.py:13\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01monnx_ops\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m apply_identity, apply_tile\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01monnx_ops\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m apply_reshape, apply_concat, apply_transpose, apply_flatten, OnnxOperatorBuilder\n\u001b[0;32m---> 13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mactivation\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m convert_keras_activation\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01madv_activation\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m convert_keras_advanced_activation\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbatch_norm\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m convert_keras_batch_normalization\n",
+      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/backend-_rtLvpYT-py3.10/lib/python3.10/site-packages/keras2onnx/ke2onnx/activation.py:21\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n\u001b[1;32m     20\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[0;32m---> 21\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m relu6 \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(\u001b[43mkeras\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapplications\u001b[49m\u001b[38;5;241m.\u001b[39mmobilenet, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrelu6\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m     22\u001b[0m     relu6 \u001b[38;5;241m=\u001b[39m keras\u001b[38;5;241m.\u001b[39mapplications\u001b[38;5;241m.\u001b[39mmobilenet\u001b[38;5;241m.\u001b[39mrelu6\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mapply_leaky_relu_keras\u001b[39m(scope, input_name, output_name, container, operator_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, alpha\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m):\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'tensorflow.python.keras' has no attribute 'applications'"
      ]
     }
    ],
    "source": [
-    "mlflow.set_experiment(\"EEG_CNN_Experiment\")\n",
     "\n",
-    "# Define input data here\n",
-    "# x_train, y_train = ...\n",
-    "# Ensure data is preprocessed correctly and one-hot encoded\n",
+    "# Export Keras model to ONNX\n",
+    "onnx_model = keras2onnx.convert_keras(model, model.name)\n",
     "\n",
-    "# Start MLflow run\n",
-    "with mlflow.start_run():\n",
-    "\n",
-    "    # Log parameters\n",
-    "    mlflow.log_param(\"epochs\", 5)\n",
-    "    mlflow.log_param(\"batch_size\", 64)\n",
-    "    mlflow.log_param(\"optimizer\", \"adam\")\n",
-    "    mlflow.log_param(\"loss\", \"categorical_crossentropy\")\n",
-    "\n",
-    "    # Build model\n",
-    "    model = models.Sequential([\n",
-    "        layers.Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)),\n",
-    "        layers.MaxPooling2D((2, 2)),\n",
-    "        layers.Conv2D(62, (3, 3), activation='relu'),\n",
-    "        layers.MaxPooling2D((2, 2)),\n",
-    "        layers.Flatten(),\n",
-    "        layers.Dense(128, activation='relu'),\n",
-    "        layers.Dense(10, activation='softmax')\n",
-    "    ])\n",
-    "\n",
-    "    model.compile(\n",
-    "        optimizer='adam',\n",
-    "        loss='categorical_crossentropy',\n",
-    "        metrics=['accuracy']\n",
-    "    )\n",
-    "\n",
-    "    # Train model\n",
-    "    history = model.fit(\n",
-    "        x_train, y_train,\n",
-    "        epochs=5,\n",
-    "        batch_size=64,\n",
-    "        validation_split=0.2,\n",
-    "        verbose=1\n",
-    "    )\n",
-    "\n",
-    "    # Log final validation metrics\n",
-    "    mlflow.log_metric(\"val_accuracy\", history.history['val_accuracy'][-1])\n",
-    "    mlflow.log_metric(\"val_loss\", history.history['val_loss'][-1])\n",
-    "\n",
-    "    # Log training metrics as a plot\n",
-    "    plt.plot(history.history['accuracy'], label='Train Accuracy')\n",
-    "    plt.plot(history.history['val_accuracy'], label='Val Accuracy')\n",
-    "    plt.title('Model Accuracy')\n",
-    "    plt.xlabel('Epoch')\n",
-    "    plt.ylabel('Accuracy')\n",
-    "    plt.legend()\n",
-    "    plt.savefig(\"accuracy_plot.png\")\n",
-    "    mlflow.log_artifact(\"accuracy_plot.png\")\n",
-    "\n",
-    "    # Save model\n",
-    "    mlflow.tensorflow.log_model(model, artifact_path=\"cnn_model\")\n"
+    "# Save to disk\n",
+    "onnx.save_model(onnx_model, \"eeg_cnn_model.onnx\")\n"
    ]
   },
   {
